# hospital-quality-dashboard

./: .gitignore  README.md  pyproject.toml
app/: dashboard.py
data/: README.md
docs/: metric_definitions.md
src/hospital_quality_dashboard/: __init__.py  config.py  data.py  kpis.py  reporting.py
tests/: test_data.py  test_kpis.py
